--- a/style/style.css
+++ b/style/style.css
@@ -1,18 +1,51 @@
-body {
-  background: url("https://res-2.cloudinary.com/simpleview/image/upload/c_fill,f_auto,h_1110,q_75,w_1920/v1/clients/vancouverbc/beaches_e5e4997c-1ad5-4463-b6a6-0b87279281dc.jpg") no-repeat center center fixed;
+.background-image {
+  position: fixed;
+  left: 0;
+  right: 0;
+  z-index: 1;
+
+  display: block;
+  background: url('https://res-2.cloudinary.com/simpleview/image/upload/c_fill,f_auto,h_1110,q_75,w_1920/v1/clients/vancouverbc/beaches_e5e4997c-1ad5-4463-b6a6-0b87279281dc.jpg')no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover;
+  background-size: cover;*/;
+  width: 100vw;
+  height: 100vh;
 
+  -webkit-filter: blur(3px);
+  -moz-filter: blur(3px);
+  -o-filter: blur(3px);
+  -ms-filter: blur(3px);
+  filter: blur(3px);
+}
+
+.container {
+  position: fixed;
+  left: 0;
+  right: 0;
+  z-index: 9999;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.home {
+  display: flex;
+  flex-direction: column-reverse;
+  flex-wrap: wrap-reverse;
+  justify-content:space-around;
+  align-items: center;
 }
 
 .login-form {
-  margin-left: auto;
-  margin-right: auto;
+  background-color: rgba(0, 0, 0, 0.6);
+  border-radius: 3px;
+  width: 40%;
+  min-width: 300px;
+  padding: 20px 20px;
   color: white;
   margin-top: 50px;
-  max-width: 280px;
+  text-shadow: 2px 2px #333333
 }
 
 .login-btns {
@@ -30,15 +63,58 @@ body {
 }
 .login-form .btn:hover {
   border: 1px solid white;
-  margin-top: 2px;
+  margin-top: -2px;
   background-color: rgba(78, 134, 200, 0.7);
   color: white;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.4);
 }
+
 .about {
-  color: white;
-  margin-top: 50px;
+  width: auto;
+  margin-top: 40px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 5px;
 }
+
+.about hr {
+  margin-top: 50px;
+  background-color: #ffffff;
+}
+.about-title {
+  text-align: center;
+  line-height: 55px;
+  margin-left: auto;
+  margin-right: auto;
+  color: white;
+  font-size: 7em;
+  font-family: california;
+  text-shadow: 2px 2px #333333;
+}
+@font-face {
+    font-family: "california";
+    src: url(./TheWoodlands-Regular.otf) format("truetype");
+}
+
+.about-subber {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 18px;
+  text-align: center;
+  color: white;
+  padding-top: 10px;
+  line-height: 25px;
+  margin-left: auto;
+  margin-right: auto;
+  text-shadow: 2px 2px #333333;
+}
+
+.about-subber div {
+  margin: 0px 10px;
+}
+
 .content {
   margin-top: 50px;
 }
